<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_request"
            android:title="@string/menu_requests" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_call_directly"
            android:icon="@drawable/ic_call"
            android:title="@string/menu_call_directly" />
        <item
            android:id="@+id/nav_promo_code"
            android:icon="@drawable/ic_solar_gift"
            android:title="@string/menu_promo_code" />
        <item
            android:id="@+id/nav_tnc"
            android:icon="@drawable/ic_privacy_tip"
            android:title="@string/menu_tnc" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sign_out" />
    </group>
</menu>