<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen">

    <ImageView
        android:id="@+id/img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:lineSpacingExtra="-7dp"
        android:text="@string/app_name"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/img"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:onClick="onBackPress"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/drawerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_back_arrow" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.75"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_margin="14dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/send_request"
                    android:textAllCaps="false"
                    android:textColor="@color/lightPrimaryColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="14dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/submit"
                    android:onClick="onSubmit"
                    android:textAllCaps="false"
                    android:textColor="@color/yellow"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightPrimaryColor" />


            <TextView
                android:id="@+id/service_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/type_of_service_requested"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/curve_black_border_brown_background">

                <Spinner
                    android:id="@+id/spService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/yellow"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/your_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/curve_black_border_brown_background"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/phone_no"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/phone_edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/curve_black_border_brown_background"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/your_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/your_location"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/add_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/add_address"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:textAllCaps="true"
                android:onClick="onAddAddressClick"
                android:drawablePadding="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_map_locator" />

            <TextView
                android:id="@+id/edit_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/edit"
                android:layout_marginStart="20dp"
                android:textAllCaps="true"
                android:visibility="gone"
                android:onClick="onAddAddressClick"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/progressBar"
        layout="@layout/dialog_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>